feat: Add custom fields

--- a/action.yml
+++ b/action.yml
@@ -34,6 +34,8 @@ inputs:
     description: 'The API key used to access Octopus Deploy. An API key is required, but you may also use the OCTOPUS_API_KEY environment variable. It is strongly recommended that this value retrieved from a GitHub secret.'
   space:
     description: 'The name of a space within which this command will be executed. The space name is required, but you may also use the OCTOPUS_SPACE environment variable.'
+  custom_fields:
+    description: 'Please note, this field is currently not available for general use. A multi-line string of custom fields for the release. Format: customFieldName: customFieldValue \n customFieldName2: customFieldValue2.'
 
 outputs:
   release_number:
