--- a/action.yml
+++ b/action.yml
@@ -35,7 +35,7 @@ inputs:
   space:
     description: 'The name of a space within which this command will be executed. The space name is required, but you may also use the OCTOPUS_SPACE environment variable.'
   custom_fields:
-    description: 'Please note, this field is currently not available for general use. A multi-line string of custom fields for the release. Format: customFieldName: customFieldValue \n customFieldName2: customFieldValue2.'
+    description: 'A multi-line string of custom fields for the release. Format: customFieldName:customFieldValue \n customFieldName2:customFieldValue2.'
 
 outputs:
   release_number:
