--- a/package.json
+++ b/package.json
@@ -5,29 +5,34 @@
   },
   "dependencies": {
     "@actions/core": "1.11.1",
-    "@octopusdeploy/api-client": "3.6.0",
+    "@octopusdeploy/api-client": "3.7.0",
     "tmp": "0.2.5"
   },
   "description": "GitHub Action to Create a Release in Octopus Deploy",
   "devDependencies": {
+    "@eslint/eslintrc": "3.3.3",
+    "@eslint/js": "9.39.1",
     "@octopusdeploy/runtime-inputs": "0.16.0",
+    "@stylistic/eslint-plugin": "5.6.1",
     "@types/jest": "29.5.14",
     "@types/json-patch": "0.0.33",
     "@types/lodash": "4.17.21",
-    "@types/node": "20.19.25",
+    "@types/node": "24.7.2",
     "@types/tmp": "0.2.6",
-    "@typescript-eslint/parser": "5.62.0",
+    "@typescript-eslint/parser": "8.48.1",
+    "@typescript-eslint/eslint-plugin": "8.48.1",
     "@vercel/ncc": "0.38.4",
-    "eslint": "8.57.1",
-    "eslint-plugin-github": "4.6.1",
-    "eslint-plugin-jest": "27.9.0",
+    "eslint": "9.39.1",
+    "eslint-plugin-github": "6.0.0",
+    "eslint-plugin-jest": "29.2.0",
+    "globals": "16.5.0",
     "jest": "29.7.0",
     "jest-circus": "29.7.0",
     "jest-junit": "15.0.0",
     "js-yaml": "4.1.1",
     "prettier": "2.8.8",
     "ts-jest": "29.4.6",
-    "typescript": "4.9.5"
+    "typescript": "5.9.3"
   },
   "homepage": "https://github.com/OctopusDeploy/create-release-action#readme",
   "jest": {
